--- a/CategoricalData.ipynb
+++ b/CategoricalData.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "(С) Андрей Кулинич, 2019\n",
     "\n",
-    "В целях кластеризации или обучения одтедьных алгоритмов необходимо перевести категориынй признаки (оценки: \"хорошо\", \"плохо\" и тд., или названия ассортиментных групп) в количественные. В этом блокноте мы рассмотрим ряд походов, которые вы сможете применить.\n",
+    "В целях кластеризации или обучения отдельных алгоритмов необходимо перевести категорийные признаки (оценки \"хорошо\", \"плохо\" и т.д. или названия ассортиментных групп) в количественные. В этом блокноте мы рассмотрим ряд подходов, которые вы сможете применить.\n",
     "\n",
     "Импортируем библиотеку pandas."
    ]
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Создадим DataFrame который будет содержать как категорийные, так и количественные признаки."
+    "Создадим DataFrame, который будет содержать как категорийные, так и количественные признаки."
    ]
   },
   {
@@ -125,9 +125,9 @@
    "source": [
     "## Самый простой способ\n",
     "\n",
-    "Самый простой способ предполагает замену все категорийный признаков на фиктивную (dummy) переменную. Фиктивная переменная может принимать значение только 0 или 1. Смотрите на примере ниже. \n",
+    "Самый простой способ предполагает замену всех категорийных признаков на фиктивную (dummy) переменную. Фиктивная переменная может принимать значение только 0 или 1. Смотрите на примере ниже. \n",
     "\n",
-    "Мы создаем новый DataFrame df_with_dummies, где автоматически все категорийные переменые будут заменены фиктивными. Столбцы с категорийными переменными также автоматически будут удалены. Дальше уже можно работать с преобразованным датафреймом."
+    "Мы создаем новый DataFrame df_with_dummies, где автоматически все категорийные переменные будут заменены фиктивными. Столбцы с категорийными переменными также автоматически будут удалены. Дальше уже можно работать с преобразованным датафреймом."
    ]
   },
   {
@@ -257,9 +257,9 @@
     "\n",
     "## Чуть сложнее\n",
     "\n",
-    "Сформируем DataFrame df_work, где немного по другому заменим столбцы с категорийными переменными. \n",
+    "Сформируем DataFrame df_work, где немного по-другому заменим столбцы с категорийными переменными. \n",
     "\n",
-    "Во первых, \"Пол\" имеет только два значения. А значит, закодирвать его можем только одним столбцом. Для этого удалим одно из значений. Это можно сделать следующей командой. "
+    "Во-первых, \"Пол\" имеет только два значения. А значит, закодировать его можем только одним столбцом. Для этого удалим одно из значений. Это можно сделать следующей командой. "
    ]
   },
   {
@@ -434,9 +434,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Если цвет, мы должны кодировать именно фиктивными переменными, то знание языка мы можем закодировать порядковыми номерами. Поясню, если цвет волос \"Шатен\" закодирован номером 0, \"Блонд\" - 2, \"Рыжий\" - 3, то это ошибка. Так как это разные цвета. Между \"Блонд\" и \"Шатен\", расстояние не больше, чем между \"Блонд\" и \"Рыжий\". А вот между знанием хорошо и отлично английского языка действителньо может быть меньше, чем полное незнание языка и отличное им владение. \n",
+    "Если цвет мы должны кодировать именно фиктивными переменными, то знание языка мы можем закодировать порядковыми номерами. Поясню: если цвет волос \"Шатен\" закодирован номером 0, \"Блонд\" - 2, \"Рыжий\" - 3, то это ошибка, так как это разные цвета. Между \"Блонд\" и \"Шатен\" расстояние не больше, чем между \"Блонд\" и \"Рыжий\". А вот между знанием хорошо и отлично английского языка действительно может быть меньше, чем полное незнание языка и отличное им владение. \n",
     "\n",
-    "Можно использовать метод factorize, он автоматически сформируем список, который можно использовать как значения столбца."
+    "Можно использовать метод factorize: он автоматически сформирует список, который можно использовать как значения столбца."
    ]
   },
   {
@@ -464,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Названия групп товаров можно кодировать через среднюю цену этой группы. Но можно и самим сформировать словать с кодами. В этом случае, вы управляете что и каким номером будет закодировано."
+    "Названия групп товаров можно кодировать через среднюю цену этой группы. Но можно и самим сформировать словарь с кодами. В этом случае вы управляете тем, что и под каким номером будет закодировано."
    ]
   },
   {
@@ -836,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
