--- a/BaseClientAnalize.ipynb
+++ b/BaseClientAnalize.ipynb
@@ -21,6 +21,18 @@
     "\n",
     "Ниже представлен полноценный, комплексный алгоритм анализа клиентской базы с кодом и пояснениями. В качестве имен клиентов используются случаной выбранные русские имена. Сам датасет, на котором проводился анализ не будет предоставлен. Но будет описана структура файла с данными. Вы можете или самостоятельно провести анализ или обратиться ко мне за содействием. \n",
     "\n",
+    "# На что обратить внимание \n",
+    "\n",
+    "В блокноте много данных и кода. Можно пропустить блок связанный с общим обзором и поиском аномалий. Обратите внмиание на разделы:\n",
+    "* Вклад клиентов по годам\n",
+    "* Коэффициенты удержания и пожизненная ценность клиента\n",
+    "* Когортный анализ\n",
+    "* RFM\n",
+    "* Сегментация исходя из продуктовой корзины\n",
+    "* Ассоциативные правила\n",
+    "* Скоринг клиентов\n",
+    "\n",
+    "\n",
     "# Изучаем данные на предмет выбросов\n",
     "\n",
     "Загрузим базовые библиотеки и изучим данные на предмет выбросов. Любые данные чаще всего содержат искажения, ошибки, нестандартные события и тд, которые нуждаются в корректировке и очистке."
@@ -6842,7 +6854,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7964,7 +7975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   },
   "varInspector": {
    "cols": {
