--- a/BaseClientAnalize.ipynb
+++ b/BaseClientAnalize.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Автор: Андрей Кулинич, ai@kulinich.ru*\n",
+    "\n",
+    "Может свободно использоваться. Если не сможете повторить подобный анализ, буду рад быть полезным (научить или выполнить с расшифровкой для вас).\n",
+    "\n",
     "# В поисках лучших клиентов\n",
     "\n",
     "Ключевой актив любой компании - это ее клиенты. Они могут как приносить прибыль и формировать устойчивое будущее компании, так и наносить финансовый ущерб. И это наиболее важная область деятельности компании, где теребуется наладить анализ, учет и контроль. Вплоть до того, чтобы ввести новый функицонал: бухгалтер по клиентам. Ведь за потерю клиента, в отличии от других материальных аткивов компании никто не отвечает.\n",
